<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_marginBottom="5dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CEF9AB">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">

                <TextView
                    android:id="@+id/fname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"
                    android:textColor="@android:color/black"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/lname"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lname"
                    android:textColor="@android:color/black"
                    android:textSize="21sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">

                <TextView
                    android:id="@+id/course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:layout_marginStart="5dp"
                    android:textSize="21sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">


                <TextView
                    android:id="@+id/grades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snumber"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marks"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="21sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>
