<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_By"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/rbGroup"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbIds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ID"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rbCode"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/programc" />


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:id="@+id/idsLayout">


                <EditText
                    android:id="@+id/etIds"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="match_parent"
                    android:hint="@string/eId"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:id="@+id/programCodeLayout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/eProgramCode"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/search"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/search" />


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:focusable="true"
            android:padding="5dp"
            android:layout_margin="5sp"
            android:focusableInTouchMode="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2sp"
                android:visibility="visible" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>