<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GradeEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student Registration"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/efname"></EditText>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">

                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/elname"></EditText>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="left|center">

                    <EditText
                        android:id="@+id/marks"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/emarks"
                        android:textColorHint="@color/black"></EditText>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="left|center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/course"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="Orientation">

                    <Spinner
                        android:id="@+id/courseSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:padding="4dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/credit"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/oneCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/c1"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/twoCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/c2" />

                    <RadioButton
                        android:id="@+id/threeCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/c3" />

                    <RadioButton
                        android:id="@+id/fourCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c4" />
                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/purple_500"
                    android:text="Submit"
                    android:textColor="@color/white">

                </Button>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>